fix out of box labels

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ h2 {
   font-weight: bold;
   font-size: 1.3rem;
   padding: 0px 6px 2px 6px;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.55);
   border-radius: 14px;
 }
 #loader {
